--- a/index.html
+++ b/index.html
@@ -16,8 +16,48 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown>
+					<textarea data-template>
+					## Title Slide
+					---
+					## What we are going to learn
+					- Basics of programming (JavaScript)
+					- 3D and Animation (Three.js)
+					- 3D modeling (Blender)
+					---
+					## Tools
+					- VS Code: editor
+					- Powershell: command line
+					- JavaScript: programming language
+					- Three.js: framework
+					- Blender: 3D modeling
+					---
+					## Class Format
+					- Learn
+					- Apply
+					- Play
+					---
+					## Javascript in your browser
+					<pre><code data-line-numbers>console.log('Hello, World!');
+					</code></pre>
+					---
+					## Functions
+					<pre><code data-line-numbers>function hello() {
+						console.log("Hello World!");
+					}
+
+					hello();
+					</code></pre>
+					---
+					## Variables
+					<pre><code data-line-numbers>let words = "Hello World!";
+					console.log(words);
+					</code></pre>
+					---
+
+
+					</textarea>
+				</section>
 			</div>
 		</div>
 
