Slides updates for week 1

--- a/week1.html
+++ b/week1.html
@@ -17,36 +17,41 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown>
-					<textarea data-template>
-					## Welcome to 4H
-					3D and Animation
+				  <textarea data-template>
+					## This Week
+Introduction to JavaScript and Basics of Programming
 					---
-					## Share
-					- Name
-					- Grade in school
-					- Favorite thing to do
+					## Javascript
+					<pre><code data-line-numbers>console.log('Hello, World!');
+					</code></pre>
 					---
-					## Topics
-					- Basics of programming (JavaScript)
-					- 3D and Animation (Three.js)
-					- 3D modeling (Blender)
-					---
-					## Tools
-					- JavaScript: programming language
-					- Three.js: framework
-					- Blender: 3D modeling
-					- VS Code: editor
-					- Powershell: command line
-					---
-					## Class Format
-					- Learn
-					- Apply
-					- Play
-					---
-					## Weekly Schedule
-					<a href="/week1.html">Week 1</a>
+					## Functions
+					<pre><code data-line-numbers>function hello() {
+						console.log("Hello World!");
+					}
 
-					</textarea>
+					hello();
+					</code></pre>
+					---
+					## Variables
+					<pre><code data-line-numbers>let words = "Hello World!";
+					console.log(words);
+					</code></pre>
+					---
+					## VS Code
+Save the following code as <code>hello.js</code>
+					<pre><code data-line-numbers>console.log('Hello, World!');
+					</code></pre>
+					---
+					## Powershell
+					* Open Powershell and type <pre><code>> node hello.js</code></pre>
+					---
+					## Three.js Preview
+<a target="_blank" href="https://threejs.org">Three.js website</a>
+					---
+					## Reflection
+					Take 3 minutes to reflect on what you learned today
+          </textarea>
 				</section>
 			</div>
 		</div>
