Initial topics for Week 2

--- a/week2.html
+++ b/week2.html
@@ -17,37 +17,27 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown>
-					<textarea data-template>
-					## Welcome to 4H
-					3D and Animation
+				  <textarea data-template>
+					## This Week
+Introduction to HTML and Three.js Basics
 					---
-					## Share
-					- Name
-					- Grade in school
-					- Favorite thing to do
+					## HTML Basics
 					---
-					## Topics
-					- Basics of programming (JavaScript)
-					- 3D and Animation (Three.js)
-					- 3D modeling (Blender)
+					## Structure of a Three.js Scene
 					---
-					## Tools
-					- JavaScript: programming language
-					- Three.js: framework
-					- Blender: 3D modeling
-					- VS Code: editor
-					- Powershell: command line
+					## Add a Scene
 					---
-					## Class Format
-					- Learn
-					- Apply
-					- Play
+					## Add a Mesh
 					---
-					## Weekly Schedule
-					<a href="/week1.html">Week 1</a><br/>
-					<a href="/week2.html">Week 2</a>
-
-					</textarea>
+					## Add an Item
+					---
+					## Add a Camera
+					---
+					## Render
+					---
+					## Reflection
+					Take 3 minutes to reflect on what you learned today
+          </textarea>
 				</section>
 			</div>
 		</div>
