Added new files for remaining weeks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					## Welcome to 4H
 					3D and Animation
 					---
+					## About 4H
+					- Head, Heart, Hands, Health
+					---
 					## Share
 					- Name
 					- Grade in school
