--- a/week3.html
+++ b/week3.html
@@ -19,39 +19,19 @@
 				<section data-markdown>
 				  <textarea data-template>
 					## This Week
-Introduction to HTML and Three.js Basics
+Animation
 					---
-					## HTML Basics
+					## Testing
 					---
-					## Structure of a Three.js Scene
+					## Testing
 					---
 					## Starter file
-- Open starter file
-- Run npm install
-- Run npm start
-					---
-					## Add a Scene
 <pre><code data-line-numbers="5">import * as THREE from "three";
 import { OrbitControls } from "three/addons/controls/OrbitControls.js";
-
-// initialize the scene
-const scene = new THREE.Scene();
 </code></pre>
 					---
-					## Add a Geometry
-					---
-					## Add a Material
-					---
-					## Add a Mesh
-					---
-					## Add an Item
-					---
-					## Add a Camera
-					---
-					## Render
-					---
 					## Next week
-					- Positioning, Scale, and Rotation
+					- Blender
 					---
 					## Reflection
 					Take 3 minutes to reflect on what you learned today
