Updates to slides with more Javascript examples

--- a/week1.html
+++ b/week1.html
@@ -22,7 +22,36 @@
 Introduction to JavaScript and Basics of Programming
 					---
 					## Javascript
+In Your Browser
 					<pre><code data-line-numbers>console.log('Hello, World!');
+					</code></pre>
+					---
+					## Variables (String)
+					<pre><code data-line-numbers>let words = "Hello World!";
+					console.log(words);
+
+					</code></pre>
+					---
+					## Variables (Number)
+					<pre><code data-line-numbers>let myOddNumbers = 13579;
+					console.log(myOddNumbers);
+
+					</code></pre>
+					---
+					## Variables (Object)
+					<pre><code data-line-numbers>let myObject = {
+						one: 1,
+						two: "two",
+						three: "tres"
+					};
+
+					console.log(myObject.one);
+					</code></pre>
+					---
+					## Lists (Array)
+					<pre><code data-line-numbers>let myList = ["apples", "oranges", "bananas"];
+
+					console.log(myList);
 					</code></pre>
 					---
 					## Functions
@@ -33,9 +62,22 @@ Introduction to JavaScript and Basics of Programming
 					hello();
 					</code></pre>
 					---
-					## Variables
-					<pre><code data-line-numbers>let words = "Hello World!";
-					console.log(words);
+					## Function witih parameter
+					<pre><code data-line-numbers>function hello(name) {
+						console.log("Hello, " + name + "!");
+					}
+
+					hello("Mr. Raphy");
+					</code></pre>
+					---
+					## Operators
+					<pre><code data-line-numbers>		+
+						*
+						/
+					</code></pre>
+					<pre><code data-line-numbers>	===
+						<=
+						>=
 					</code></pre>
 					---
 					## VS Code
@@ -45,6 +87,13 @@ Save the following code as <code>hello.js</code>
 					---
 					## Powershell
 					* Open Powershell and type <pre><code>> node hello.js</code></pre>
+					---
+					## Practice coding
+					<ul>
+						<li>Write a function that accepts two numbers, adds them, and outputs the answer</li>
+						<li>Write a function that accepts a list (in a variable) and outputs all items in the list</li>
+						<li>Write a function that accepts a first and last name and greets the person using both first and last name</li>
+					</ul>
 					---
 					## Three.js Preview
 <a target="_blank" href="https://threejs.org">Three.js website</a>
