--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<section data-markdown>
 					<textarea data-template>
 					## Welcome to 4H
-					3D and Animation
+					<p>3D and Animation<br/>
+					<i>Mrs. Anne and Mr. Raphy</i></p>
 					---
 					## About 4H
 					- Head, Heart, Hands, Health
@@ -47,8 +48,12 @@
 					- Play
 					---
 					## Weekly Schedule
-					<a href="/week1.html">Week 1</a><br/>
-					<a href="/week2.html">Week 2</a>
+					<a href="/week1.html">Week 1</a> •
+					<a href="/week2.html">Week 2</a> •
+					<a href="#">Week 3</a><br/>
+					<a href="#">Week 4</a> •
+					<a href="#">Week 5</a> •
+					<a href="#">Week 6</a>
 
 					</textarea>
 				</section>
