--- a/week2.html
+++ b/week2.html
@@ -22,13 +22,23 @@
 Introduction to HTML and Three.js Basics
 					---
 					## HTML Basics
+- HTML is a markup language
+- HTML is used to structure a web page
+- HTML is used to describe the content of a web page
+- HTML consists of a series of elements
+- HTML elements tell the browser how to display the content
 					---
 					## Structure of a Three.js Scene
 					---
+					## Three.js Documentation
+					- Go to https://threejs.org/docs/
+					---
 					## Starter file
 - Open starter file
-- Run npm install
-- Run npm start
+<pre><code>> cd ~/Desktop/4h-threejs-starterfile</code></pre>
+- <pre><code>> npm install</code></pre>
+- <pre><code>> npm run dev</code></pre>
+- Go to http://localhost:5173/
 					---
 					## Add a Scene
 <pre><code data-line-numbers="5">import * as THREE from "three";
@@ -37,21 +47,84 @@ import { OrbitControls } from "three/addons/controls/OrbitControls.js";
 // initialize the scene
 const scene = new THREE.Scene();
 </code></pre>
+
+https://bit.ly/499se28
 					---
 					## Add a Geometry
+<pre><code data-line-numbers="5">const cubeGeometry = new THREE.BoxGeometry(1, 1, 1);
+</code></pre>
+
+https://bit.ly/3udtUZK
 					---
 					## Add a Material
+<pre><code data-line-numbers="5,3-5">const cubeGeometry = new THREE.BoxGeometry(1, 1, 1);
+
+const cubeMaterial = new THREE.MeshBasicMaterial({
+	color: 0xff0000
+});
+</code></pre>
+
+https://bit.ly/3SBygDu
 					---
 					## Add a Mesh
+<pre><code data-line-numbers>const cubeMesh = new THREE.Mesh(
+  cubeGeometry,
+  cubeMaterial
+)
+</code></pre>
+
+https://bit.ly/3ukYjVZ
 					---
 					## Add an Item
+<pre><code data-line-numbers>scene.add(cubeMesh);
+</code></pre>
 					---
 					## Add a Camera
+<pre><code data-line-numbers>const camera = new THREE.PerspectiveCamera(
+  75,
+  window.innerWidth / window.innerHeight,
+  0.1,
+  1000
+);
+</code></pre>
+
+https://bit.ly/42h3VNH
 					---
 					## Render
+<pre><code data-line-numbers>const canvas = document.querySelector('canvas.threejs-canvas');
+const renderer = new THREE.WebGLRenderer({canvas});
+renderer.setSize(window.innerWidth, window.innerHeight);
+</code></pre>
+
+https://bit.ly/3vSAYLL
+					---
+					## Render
+<pre><code data-line-numbers="5">const canvas = document.querySelector('canvas.threejs-canvas');
+const renderer = new THREE.WebGLRenderer({canvas});
+renderer.setSize(window.innerWidth, window.innerHeight);
+
+renderer.render(scene, camera);
+</code></pre>
+					---
+					## Position the Camera
+<pre><code data-line-numbers="1-3">camera.position.z = 20;
+camera.position.x = 0;
+camera.position.y = -5;
+
+scene.add(camera);
+</code></pre>
+
+https://bit.ly/4be5qQJ
+					---
+					## Exercises
+- Find another shape and render it to the page
+https://bit.ly/47WEh21
+- Change the parameters
+- Change the color
+- Change the position of the camera
 					---
 					## Next week
-					- Positioning, Scale, and Rotation
+					- Positioning, Scale, Rotation, and Animation
 					---
 					## Reflection
 					Take 3 minutes to reflect on what you learned today
