--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 					## Weekly Schedule
 					<a href="/week1.html">Week 1</a> •
 					<a href="/week2.html">Week 2</a> •
-					<a href="#">Week 3</a><br/>
-					<a href="#">Week 4</a> •
-					<a href="#">Week 5</a> •
-					<a href="#">Week 6</a>
+					<a href="/week3.html">Week 3</a><br/>
+					<a href="/week4.html">Week 4</a> •
+					<a href="/week5.html">Week 5</a> •
+					<!-- <a href="#">Week 6</a> -->
 
 					</textarea>
 				</section>
